# cathook

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODOCMakeLists.txt  Toolchain-cross-m32.cmake  animfix  attach  attach-backtrace  attach-backtrace-csgo  attach-csgo  attach.sh  build  build-debug  build-hl2dm  build-linux.sh  bulid.sh  clean.sh  developer  install-all  load.sh  makefile  update  update-gccpatch.sh
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  suggestion.md
config_data/: rich_presence.txt
data/: menu.json
data/menu/: player-list-window.xml
gui/: drawmachine.cpp  init.cpp  init.hpp  stacking.cpp
gui/base/: baseelement.cpp  button.hpp  divider.cpp  root.hpp  slider.cpp  slider.hpp
gui/menu/: menu.cpp
gui/sidestrings/: init.hpp  sidestrings.hpp
include/: MiscTemporary.hpp  backpacktf.hpp  bytepatch.hpp  chatstack.hpp  common.hpp  config.h.in  crits.hpp  entitycache.hpp  entityhitboxcache.hpp  enums.hpp  globals.h  helpers.hpp  hooks.hpp  ipc.hpp  itemtypes.hpp  playerlist.hpp  prediction.hpp  soundcache.hpp
include/copypasted/: CMakeLists.txt  xorstring.h
include/core/: netvars.hpp  offsets.hpp
include/gui/: GUI.hpp  menu.hpp
include/hacks/: Aimbot.hpp  AntiAntiAim.hpp  AutoHeal.hpp  AutoTaunt.hpp  Backtrack.hpp  CatBot.hpp  Misc.hpp  NavBot.hpp  SkinChanger.hpp  Trigger.hpp
include/hooks/: HookTools.hpp  HookedMethods.hpp  LevelInit.h
include/sdk/: CGameRules.h
include/settings/: Key.hpp
include/visual/: colors.hpp  drawex.hpp  drawmgr.hpp
neko-toolchain/: mingw-linux.cmake
old/: IMP TODO STUFF  update-nobuild
old/src/: metalspin.cpp
res/shaders/: CMakeLists.txt  shader_conv  shader_conv.cpp  v2f-c4f.frag.h  v2f-c4f.vert.h
scripts/: dependencycheck  migrations
scripts/binarypackage/: attach
src/: CaptureLogic.cpp  MiscTemporary.cpp  PlayerTools.cpp  backpacktf.cpp  change.cpp  chatlog.cpp  chatstack.cpp  common.h  conditions.cpp  controlpointcontroller.cpp  crits.cpp  cvwrapper.h  entitycache.cpp  entityhitboxcache.cpp  entry.cpp  flagcontroller.cpp  globals.cpp  hack.cpp  hack.h  helpers.cpp  hitrate.cpp  hooks.cpp  hoovy.cpp  https_request.cpp  init.hpp  ipc.cpp  itemtypes.cpp  localplayer.cpp  logging.h  modules.7z  navparser.cpp  nospread.cpp  nullnexus.cpp  pathfinder.cpp  playerlist.cpp  playerresource.cpp  prediction.cpp  projlogging.cpp  sconvars.cpp  shutdown.cpp  (+11 more)
src/classinfo/: classinfo.cpp  dump.cpp  dynamic.gen.cpp
src/copypasted/: CSignature.cpp
src/core/: cvwrapper.cpp  entry.cpp  interfaces.cpp  logging.cpp  netvars.cpp  profiler.cpp  sharedobj.cpp
src/features/: aimbot.cpp  aimbot.hpp  antiaim.cpp  antiaim.hpp  bhop.cpp  bhop.hpp  debug.cpp  debug.hpp  esp.cpp  esp.hpp  features.cpp  features.hpp  followbot.cpp  followbot.hpp  misc.cpp  radar.cpp  spam.cpp  spam.hpp  triggerbot.cpp  triggerbot.hpp  walkbot.cpp  walkbot.hpp
src/framework/: bones.cpp  bones.hpp  catvars.cpp  catvars.hpp  config.cpp  config.hpp  console.cpp  console.hpp  drawing.cpp  drawing.hpp  drawmgr.cpp  drawmgr.hpp  entitys.cpp  entitys.hpp  game.cpp  game.hpp  gameticks.cpp  gameticks.hpp  input.cpp  input.hpp  inputmgr.cpp  inputmgr.hpp  ipc.cpp  ipc.hpp  localplayers.cpp  localplayers.hpp  playerstate.cpp  prediction.cpp  prediction.hpp  trace.cpp  trace.hpp  worldtickmgr.cpp  worldtickmgr.hpp  worldtoscreen.cpp  worldtoscreen.hpp
src/gui/: CMakeLists.txt  CMenuWindow.cpp  GUI.cpp  GUI.h  drawmachine.cpp  drawmachine.hpp  gui.cpp  gui.hpp  init.cpp  init.hpp  inputmachine.cpp  inputmachine.hpp  menu.cpp  nopeyguitodo.md  stacking.hpp
src/gui/base/: CBaseContainer.cpp  CBaseContainer.h  CBaseContainer.hpp  CBaseInfoBox.cpp  CBaseInfoBox.hpp  CBaseParent.cpp  CBaseParent.hpp  CBaseRoot.cpp  CBaseRoot.hpp  CBaseTitleBar.cpp  CBaseTitleBar.hpp  CBaseTooltip.cpp  CBaseTooltip.hpp  CBaseWidget.cpp  CBaseWidget.h  CBaseWidget.hpp  CBaseWindow.cpp  CBaseWindow.h  CBaseWindow.hpp  CTitleBar.cpp  CTitleBar.h  CTitleBar.hpp  IWidget.h  IWidget.hpp  baseelement.cpp  baseelement.hpp  button.cpp  button.hpp  buttonbar.cpp  buttonbar.hpp  buttontoggle.cpp  buttontoggle.hpp  colorpicker.cpp  colorpicker.hpp  divider.cpp  divider.hpp  elements.hpp  new &3  organizer.cpp  organizer.hpp  (+4 more)
src/gui/base/examples/: test_window.cpp  test_window.hpp
src/gui/console/: console.cpp
src/gui/hudstrings/: hudstring.cpp  hudstring.hpp  sidestrings.cpp  sidestrings.hpp
src/gui/menu/: catvar.cpp  catvar.hpp  menu.cpp  menu.hpp  menubutton.cpp  menubutton.hpp  menutree.cpp  menutree.hpp
src/gui/ncc/: Menu.cpp
src/gui/sidestrings/: init.cpp  sidestrings.cpp  sidestrings.hpp
src/gui/tmp/: CBaseContainer.cpp  CBaseContainer.hpp  CBaseRoot.hpp
src/gui/tmp-base/: CBaseButton.cpp  CBaseButton.h  CBaseContainer.cpp  CBaseContainer.h  CBaseWidget.cpp  CBaseWidget.h  CBaseWindow.cpp  CCTitleBar.cpp  CCVarContainer.cpp  CCheckbox.cpp  CDropdown.cpp  CDropdownEntry.cpp  CDropdownList.cpp  CKeyInput.cpp  CKeyInput.h  CMenuContainer.cpp  CMenuList.cpp  CMenuListEntry.cpp  CMenuWindow.cpp  CSlider.cpp  CSplitContainer.cpp  CTextInput.cpp  CTextInput.h  CTextLabel.cpp  CTooltip.cpp  GUI.cpp  GUI.h  IWidget.h  KeyValues.h  RootWindow.cpp  wordwrap.h
src/gui/tmp-base/ncc/: Item.cpp  ItemSublist.cpp  ItemSublist.hpp  ItemTitle.cpp  ItemVariable.cpp  ItemVariable.hpp  List.cpp  List.hpp  Menu.cpp  Menu.hpp  Root.cpp  Root.hpp  Tooltip.cpp  Tooltip.hpp
src/gui/tmp/examples/: test_window.hpp
src/hacks/: Achievement.cpp  Aimbot.cpp  Announcer.cpp  AntiAim.cpp  AntiAntiAim.cpp  AntiBackstab.cpp  AntiCheat.cpp  AntiDisguise.cpp  AntiTaunts.cpp  AutoBackstab.cpp  AutoDeadringer.cpp  AutoDetonator.cpp  AutoEquip.cpp  AutoHeal.cpp  AutoItem.cpp  AutoJoin.cpp  AutoParty.cpp  AutoReflect.cpp  AutoSticky.cpp  AutoTaunt.cpp  AutoViewmodel.cpp  Backtrack.cpp  BulletTracers.cpp  Bunnyhop.cpp  CMakeLists.txt  CatBot.cpp  Chams.cpp  CritSay.cpp  DataCenter.cpp  DominateMark.cpp  DominateSay.cpp  ESP.cpp  ExplosionCircles.cpp  FollowBot.cpp  FollowBot.h  (+31 more)
tf-settings/: menu.json
tools/: updater.sh
(+306 files in other folders)
